--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="<%= BASE_URL %>favicon.ico" rel="icon">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <link href="customStyles.css" rel="stylesheet"/>
+    <link href="manifest" rel="manifest"/>
     <title>EduCorvi Quiz</title>
 </head>
 <body>
